--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -58,7 +58,7 @@ html(lang='en')
                         span.text-primary Taylor
                     .subheading.mb-5
                         | 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · 
-                        a(href='mailto:name@email.com') name@email.com
+                        a(href='mailto:name@email.com') mihash@gmail.com
                     p.lead.mb-5
                         | I'm an enthusiastic, responsible and hard working IT person. Being worked for different projects helped me to adopt to the changes quickly and
 made me a mature team worker. I am able to work well both in a team environment as well as using own initiative. I am able to work well under
