--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -54,7 +54,7 @@ html(lang='en')
             section#about.resume-section
                 .resume-section-content
                     h1.mb-0
-                        | Clarence 
+                        | Khan 
                         span.text-primary Taylor
                     .subheading.mb-5
                         | 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · 
