--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -54,8 +54,8 @@ html(lang='en')
             section#about.resume-section
                 .resume-section-content
                     h1.mb-0
-                        | Khan 
-                        span.text-primary Taylor
+                        | Mihash 
+                        span.text-primary Khan
                     .subheading.mb-5
                         | 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · 
                         a(href='mailto:name@email.com') name@email.com
