--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -58,7 +58,7 @@ html(lang='en')
                         span.text-primary Khan
                     .subheading.mb-5
                         | 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · 
-                        a(href='mailto:name@email.com') name@email.com
+                        a(href='mailto:name@email.com') mihashkh@gmail.com
                     p.lead.mb-5
                         | I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
                     .social-icons
