--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -60,7 +60,8 @@ html(lang='en')
                         | 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · 
                         a(href='mailto:name@email.com') mihashkh@gmail.com
                     p.lead.mb-5
-                        | I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+                        | I'm an enthusiastic, responsible and hard working IT person. Being worked for different projects helped me to adopt to the changes quickly and made me a mature team worker. I am able to work well both in a team environment as well as using own initiative. I am able to work well under pressure and adhere to strict deadlines.
+
                     .social-icons
                         a.social-icon(href='#')
                             i.fab.fa-linkedin-in
