--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -74,21 +74,21 @@ html(lang='en')
 
             hr.m-0
 
-            // Experience
+            // Experience         
             section#experience.resume-section
                .resume-section-content
                     h2.mb-5 Experience
 
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
-                            h3.mb-0 Senior Web Developer
-                            .subheading.mb-3 Intelitec Solutions
+                            h3.mb-0 Full Stack Developer
+                            .subheading.mb-3 SoftSuave Technologies Pvt Ltd
                             p
                                 | Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.
                         .flex-shrink-0
-                            span.text-primary March 2013 - Present
+                            span.text-primary May 2019 - Sep 2020
 
-                    .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
+                    //.d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
                             h3.mb-0 Web Developer
                             .subheading.mb-3 Intelitec Solutions
@@ -97,7 +97,7 @@ html(lang='en')
                         .flex-shrink-0
                             span.text-primary December 2011 - March 2013
 
-                    .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
+                    //.d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
                             h3.mb-0 Junior Web Designer
                             .subheading.mb-3 Shout! Media Productions
@@ -106,7 +106,7 @@ html(lang='en')
                         .flex-shrink-0
                             span.text-primary July 2010 - December 2011
 
-                    .d-flex.flex-column.flex-md-row.justify-content-between
+                    //.d-flex.flex-column.flex-md-row.justify-content-between
                         .flex-grow-1
                             h3.mb-0 Web Design Intern
                             .subheading.mb-3 Shout! Media Productions
@@ -121,23 +121,25 @@ html(lang='en')
             section#education.resume-section
                 .resume-section-content
                     h2.mb-5 Education
-
+                    
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
-                            h3.mb-0 University of Colorado Boulder
-                            .subheading.mb-3 Bachelor of Science
-                            div Computer Science - Web Development Track
-                            p GPA: 3.23
+                            h3.mb-0 Madras Institute Of Technology
+                            .subheading.mb-3 Bachelor of Technology
+                            div Information Technology
+                            //p GPA: 3.23
                         .flex-shrink-0
-                            span.text-primary August 2006 - May 2010
+                            span.text-primary June 2013 - April 2017
 
                     .d-flex.flex-column.flex-md-row.justify-content-between
                         .flex-grow-1
-                            h3.mb-0 James Buchanan High School
-                            .subheading.mb-3 Technology Magnet Program
-                            p GPA: 3.56
+                            h3.mb-0 SKV matriculation Higher Secondary School
+                            .subheading.mb-3 HSC
+                            p Marks:1157/1200
                         .flex-shrink-0
                             span.text-primary August 2002 - May 2006
+
+                            
 
             hr.m-0
 
