--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -156,20 +156,20 @@ html(lang='en')
                         li.list-inline-item
                             i.fab.fa-js-square
                         li.list-inline-item
-                            i.fab.fa-angular
+                            i.fab.fa-java
                         li.list-inline-item
                             i.fab.fa-react
-                        li.list-inline-item
+                        //li.list-inline-item
                             i.fab.fa-node-js
                         li.list-inline-item
                             i.fab.fa-sass
-                        li.list-inline-item
+                        //li.list-inline-item
                             i.fab.fa-less
-                        li.list-inline-item
+                        //li.list-inline-item
                             i.fab.fa-wordpress
-                        li.list-inline-item
+                        //li.list-inline-item
                             i.fab.fa-gulp
-                        li.list-inline-item
+                        //li.list-inline-item
                             i.fab.fa-grunt
                         li.list-inline-item
                             i.fab.fa-npm
@@ -178,19 +178,19 @@ html(lang='en')
                         li
                             span.fa-li
                                 i.fas.fa-check
-                            | Mobile-First, Responsive Design
+                            | Java ,Spring Boot , JPA
                         li
                             span.fa-li
                                 i.fas.fa-check
-                            | Cross Browser Testing & Debugging
+                            | JavaScript , Jquery
                         li
                             span.fa-li
                                 i.fas.fa-check
-                            | Cross Functional Teams
+                            | Html5 , Css3
                         li
                             span.fa-li
                                 i.fas.fa-check
-                            | Agile Development & Scrum
+                            | AJax , React ,Git
 
             hr.m-0
 
