--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -86,7 +86,7 @@ html(lang='en')
                             p
                                 | Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.
                         .flex-shrink-0
-                            span.text-primary May 2019 - Sep 2020
+                            span.text-primary May 2019 - Present
 
                     //.d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
