--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -138,11 +138,11 @@ html(lang='en')
                             p Marks:1157/1200
                         .flex-shrink-0
                             span.text-primary August 2002 - May 2006
-                            .d-flex.flex-column.flex-md-row.justify-content-between
+                    .d-flex.flex-column.flex-md-row.justify-content-between
                         .flex-grow-1
-                            h3.mb-0 SKV matriculation Higher Secondary School
-                            .subheading.mb-3 HSC
-                            p Marks:1157/1200
+                            h3.mb-0 Mahadeva Vidyalaya Higher Secondary School
+                            .subheading.mb-3 SSC
+                            p Marks:471/500
                         .flex-shrink-0
                             span.text-primary August 2002 - May 2006
 
